# clipxd

./: .gitignore  Cargo.toml  README.md
.github/: pr-design-redesign.md
.github/workflows/: README.md  ci.yml  deploy.yml
.scripts/: push-and-pr.sh
app/: index.html  package-lock.json  package.json  vite.config.ts
app/public/: manifest.json  robots.txt  sitemap.xml
app/src/: App.tsx  Brand.tsx  CameraConfig.ts  Chat.tsx  ClipPage.tsx  Docs.tsx  Import.tsx  Landing.tsx  Library.tsx  Login.tsx  Prompter.tsx  ReadBody.tsx  Recording.tsx  RegionTrack.tsx  SearchBox.tsx  Settings.tsx  ShareModal.tsx  Sidebar.tsx  SubtitleStyle.tsx  WatchBody.tsx  api.ts  lastClip.ts  main.tsx  motion.ts  regions.ts  sample.ts  seo.tsx  styles.css  types.ts  useAuth.ts  useClipData.ts  useEscape.ts  useScreenRecorder.ts
crates/clipxd-browser/: Cargo.toml
crates/clipxd-browser/src/: ingest.rs  lib.rs  salience.rs  trace.rs
crates/clipxd-cinematic/: Cargo.toml
crates/clipxd-cinematic/examples/: render.rs
crates/clipxd-cinematic/src/: annotate.rs  easing.rs  lib.rs  mockup.rs  render.rs  scene.rs  spring.rs  types.rs  zoom.rs
crates/clipxd-cli/: Cargo.toml
crates/clipxd-cli/src/: beautify.rs  main.rs  text.rs
crates/clipxd-import/: Cargo.toml
crates/clipxd-import/src/: downscale.rs  gate.rs  lib.rs  map.rs  media.rs  phash.rs  pipeline.rs
crates/clipxd-index/: Cargo.toml
crates/clipxd-index/src/: clean.rs  lib.rs  query.rs  schema.rs
crates/clipxd-index/tests/: real_prod_index_parses.rs
crates/clipxd-index/tests/fixtures/: pre_label_index.json
crates/clipxd-mcp/: Cargo.toml
crates/clipxd-mcp/src/: lib.rs  main.rs
crates/clipxd-recorder/: Cargo.toml
crates/clipxd-recorder/examples/: transcribe_bench.rs
crates/clipxd-recorder/src/: autofocus.rs  capture.rs  incremental.rs  index_map.rs  lib.rs  pipeline.rs  redact.rs  source.rs  transcribe.rs  types.rs
crates/clipxd-recorder/tests/: incremental_smoke.rs
crates/clipxd-web/: Cargo.toml
crates/clipxd-web/examples/: deeppass_bench.rs
crates/clipxd-web/src/: ask.rs  auth.rs  deeppass.rs  docgen.rs  emphasis.rs  label.rs  lib.rs  llm.rs  main.rs  mcp.rs  preview_gif.rs  storage.rs
deploy/: Caddyfile  README.md  deploy.sh  github-login.sh  provision.sh
docs/: PROJECT.md  README.md  architecture.md  capture-backends.md  competitive-analysis.md  features.md  glossary.md  index-schema.md  licensing.md  mcp-api.md  ocr-backends.md  overview.md  phase2-browser-spec.md  phase3-recorder-plan.md  phases.md  plan.md  privacy-and-redaction.md  recorder-feature-catalog.md  reference-analysis.md  risks-and-open-questions.md  roadmap.md  sharing.md  tech-stack.md  teleprompter-voice-captions-design.md
docs/design/: 3d-ClipXD.dc.html  ClipXD.dc.html  updated-3d-ClipXD.dc.html
examples/: README.md  checkout-500.trace.json
extension/: README.md  background.js  content.js  inject.js  local-captioner.js  manifest.json  offscreen.html  offscreen.js  popup.html  popup.js
tools/: ci-deploy.sh  clipxd-tunnel.sh  clipxd-yt-forwarder.py  clipxd-yt-forwarder.service  show-ci-secret.sh
tools/clipxd-capture/: README.md  capture.mjs  checkout.html
tools/moondream-server/: modal_app.py  server.py
