[package]
name = "clipxd-web"
description = "The share layer — an axum HTTP service that turns a local clip into a real URL: a watchable share page, the agent-readable index.json sidecar behind the same URL, and query/search/events endpoints. CORS-enabled for the React editor. This is where the (later, closed) hosted tier lives."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "clipxd-web"
path = "src/main.rs"

[dependencies]
clipxd-index = { path = "../clipxd-index" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
