[package]
name = "clipxd-web"
description = "The share layer — an axum HTTP service that turns a local clip into a real URL: a watchable share page, the agent-readable index.json sidecar behind the same URL, and query/search/events endpoints. CORS-enabled for the React editor. This is where the (later, closed) hosted tier lives."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "clipxd-web"
path = "src/main.rs"

[dependencies]
clipxd-index = { path = "../clipxd-index" }
clipxd-recorder = { path = "../clipxd-recorder" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
# auth: local accounts (email/pw) + GitHub OAuth, JWT sessions, SQLite user/clip-ownership store
rusqlite = { version = "0.32", features = ["bundled"] }
argon2 = "0.5"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.8"
urlencoding = "2"
